<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/menu_tape" />

        <item android:id="@+id/nav_intercom"
            android:icon="@drawable/ic_compare_arrows_black_24dp"
            android:title="@string/menu_intercom">
        </item>
        <item android:id="@+id/nav_reports"
            android:icon="@drawable/ic_receipt_black_24dp"
            android:title="@string/menu_reports">
        </item>
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback"
            android:title="@string/text_feedback" />
        <item
            android:id="@+id/nav_subscriptions"
            android:icon="@drawable/ic_subscriptions_black_24dp"
            android:title="@string/text_subscriptions" />
        <item
            android:id="@+id/nav_partners"
            android:icon="@drawable/ic_partners_24dp"
            android:title="@string/text_partners" />
        <item android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings">
        </item>
    </group>


</menu>
